--- a/javascript-practice/index.html
+++ b/javascript-practice/index.html
@@ -5,7 +5,7 @@
   <title>JavaScript Practice</title>
 </head>
 <body>
-  <h1>JavaScript 실습</h1>
+  <h1>유영이 혼자 연습하는 JavaScript 🔥</h1>
 
   <!-- JS 파일 연결 -->
   <script src="./js/main.js"></script>
